--- a/src/app/listatarefa/edit-tarefa/edit-tarefa.component.html
+++ b/src/app/listatarefa/edit-tarefa/edit-tarefa.component.html
@@ -59,6 +59,7 @@
                       <input type="date" class="form-control" placeholder={{item.data}} [(ngModel)]="item.data" name="data">
                     </div>
                   </div>
+                  <a class="btn btn-info" (click)="goBack()">back</a>
                   <button type="submit" class="btn btn-primary">Atualizar</button>
             </form>
           </div>
