--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,51 @@
-<div class="page-home">
-
-    <div class="logo">
-       
+<div class="d-flex" id="wrapper">
+    <!-- Sidebar -->
+    <div class="bg-dark border-right " id="sidebar-wrapper">
+      <div class="sidebar-heading  text-light">Therichpost </div>
+      <div class="list-group list-group-flush">
+        <a routerLink="/home" class="list-group-item list-group-item-action bg-dark">Dashboard</a>
+        <a routerLink="/listatarefa" class="list-group-item list-group-item-action bg-dark">Tarefas</a>
+        <a routerLink="/new" class="list-group-item list-group-item-action bg-dark">Nova Tarefa</a>
+      </div>
     </div>
-
-    <div class="menu-home">
-        <div class="menu-left">
-            <nav>
-               
-                <a href="/home">
-                    <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
-                </a>
-            </nav>
+    <!-- /#sidebar-wrapper -->
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+      <nav class="navbar navbar-expand-lg navbar-ligth bg-ligth border-bottom">
+        <button class="btn btn-dark" id="menu-toggle">Toggle Menu</button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               {{nome}}
+              </a>
+              <div class="dropdown-menu dropdown-menu-right bg-ligth" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a  (click)="logout()"><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon>sair</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
         </div>
-
-        <!--menu-rigth-->
-        <app-menuhome></app-menuhome>
+      </nav>
+      <div class="container-fluid">
+        <app-cards></app-cards>
+      </div>
     </div>
+  </div>
 
-</div>
 
-<div class="flex-container">
-    <div class="sidebar">
-        <!--sidebar-->
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="container">
-       <!--app-cards-->
-       <app-cards></app-cards>
-    </div>
-</div>
+   
 
-<!--<div class="footer">
-    footer
-</div>-->
+
