--- a/src/app/listatarefa/edit-tarefa/edit-tarefa.component.html
+++ b/src/app/listatarefa/edit-tarefa/edit-tarefa.component.html
@@ -1,71 +1,90 @@
-
-    <div class="page-home">
-        <div class="logo">
-        </div>
-        <div class="menu-home">
-            <div class="menu-left">
-                <nav>
-                    <a href="/home">
-                        <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
-                    </a>
-                </nav>
+    <div class="d-flex" id="wrapper">
+          <!-- Sidebar -->
+          <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading">Therichpost </div>
+            <div class="list-group list-group-flush">
+              <a routerLink="/home" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+              <a routerLink="/listatarefa" class="list-group-item list-group-item-action bg-light">Tarefas</a>
+              <a routerLink="/new" class="list-group-item list-group-item-action bg-light">Nova Tarefa</a>
             </div>
+          </div>
+          <!-- /#sidebar-wrapper -->
+          <!-- Page Content -->
+          <div id="page-content-wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+              <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     {{nome}}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a  (click)="logout()"><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon>sair</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <div class="container-fluid">
+              <div *ngIf="tarefa">
+                <div *ngFor="let item of tarefa">
+                <h5>{{item.nome}}</h5>
     
-            <!--menu-rigth-->
-            <app-menuhome></app-menuhome>
-        </div>
-    </div>
-    
-    <div class="flex-container">
-        <div class="sidebar">
-            <!--sidebar-->
-            <app-sidebar></app-sidebar>
-        </div>
-
-        <div class="container">
-            <div *ngIf="tarefa">
-            <div *ngFor="let item of tarefa">
-            <h5>{{item.nome}}</h5>
-
-            <form #f="ngForm" (ngSubmit)="onUpdateTarefa(f)">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                      <label for="inputEmail4">Nome</label>
-                      <input type="text" class="form-control"  placeholder={{item.nome}} [(ngModel)]="item.nome" name="nome">
-                    </div>
-          
-                    <div class="form-group col-md-6">
-                      <label for="inputPassword4">local</label>
-                      <input type="text" class="form-control"  placeholder={{item.local}} [(ngModel)]="item.local" name="local">
-                    </div>
-                  </div>
-          
-          
-                  <div class="form-row">
-                    <div class="form-group col-md-6">
-                      <label for="inputCity">Valor</label>
-                      <input type="text" class="form-control" placeholder={{item.valor}} [(ngModel)]="item.valor" name="valor">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <label for="inputState">Situação</label>
-                      <select  class="form-control"  [(ngModel)]="item.situacao" name="status">
-                          <option value="">Situação</option>
-                          <option value="1">Pago</option>
-                          <option value="0">Pendente</option>
-                      </select>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label for="inputZip">Data</label>
-                      <input type="date" class="form-control" placeholder={{item.data}} [(ngModel)]="item.data" name="data">
-                    </div>
-                  </div>
-                  <a class="btn btn-info" (click)="goBack()">back</a>
-                  <button type="submit" class="btn btn-primary">Atualizar</button>
-            </form>
+                <form #f="ngForm" (ngSubmit)="onUpdateTarefa(f)">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="inputEmail4">Nome</label>
+                          <input type="text" class="form-control"  placeholder={{item.nome}} [(ngModel)]="item.nome" name="nome">
+                        </div>
+              
+                        <div class="form-group col-md-6">
+                          <label for="inputPassword4">local</label>
+                          <input type="text" class="form-control"  placeholder={{item.local}} [(ngModel)]="item.local" name="local">
+                        </div>
+                      </div>
+              
+              
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="inputCity">Valor</label>
+                          <input type="text" class="form-control" placeholder={{item.valor}} [(ngModel)]="item.valor" name="valor">
+                        </div>
+                        <div class="form-group col-md-4">
+                          <label for="inputState">Situação</label>
+                          <select  class="form-control"  [(ngModel)]="item.situacao" name="status">
+                              <option value="">Situação</option>
+                              <option value="1">Pago</option>
+                              <option value="0">Pendente</option>
+                          </select>
+                        </div>
+                        <div class="form-group col-md-2">
+                          <label for="inputZip">Data</label>
+                          <input type="date" class="form-control" placeholder={{item.data}} [(ngModel)]="item.data" name="data">
+                        </div>
+                      </div>
+                      <a class="btn btn-info" (click)="goBack()">back</a>
+                      <button type="submit" class="btn btn-primary">Atualizar</button>
+                </form>
+              </div>
+            </div>
+            </div>
           </div>
         </div>
-        </div>
-    
+      
     
 
 
