--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -1,63 +1,83 @@
-<div class="page-home">
-    <div class="logo">
-    </div>
-    <div class="menu-home">
-        <div class="menu-left">
-            <nav>
-                <a href="/home">
-                    <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
-                </a>
-            </nav>
+ <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+          <div class="sidebar-heading">Therichpost </div>
+          <div class="list-group list-group-flush">
+            <a routerLink="/home" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+            <a routerLink="/listatarefa" class="list-group-item list-group-item-action bg-light">Tarefas</a>
+            <a routerLink="/new" class="list-group-item list-group-item-action bg-light">Nova Tarefa</a>
+          </div>
         </div>
-
-        <!--menu-rigth-->
-        <app-menuhome></app-menuhome>
-    </div>
-</div>
-
-<div class="flex-container">
-    <div class="sidebar">
-        <!--sidebar-->
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="container">
-
-        <!--table list tarefas-->
-        <div class="tableLista">
-            <table>
-                <thead>
-                    <th>Nome</th>
-                    <th>Status</th>
-                    <th>
-                        <a routerLink="/new">
-                            <fa-icon [icon]="faPlus"></fa-icon> new
-                        </a>
-                    </th>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of listaTarefas |  paginate: { itemsPerPage: 5, currentPage: p }">
-                        <td>{{item.nome}}</td>
-                        <td *ngIf="item.status == 0">Pendente</td>
-                        <td *ngIf="item.status == 1">Pago</td>
-                        <td>
-                            <a routerLink="/edit/{{item.id}}">
-                                <fa-icon [icon]="faEdit"></fa-icon> edit
+        <!-- /#sidebar-wrapper -->
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+            <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   {{nome}}
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a  (click)="logout()"><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon>sair</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div class="container-fluid">
+            <h1 class="mt-4">Simple Sidebar</h1>
+            <div class="tableLista">
+                <table>
+                    <thead>
+                        <th>Nome</th>
+                        <th>Status</th>
+                        <th>
+                            <a routerLink="/new">
+                                <fa-icon [icon]="faPlus"></fa-icon> new
                             </a>
-                            <a>
-                                <fa-icon [icon]="faTrash"></fa-icon> delete
-                            </a>
-
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td colspan="3">
-                            <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
+                        </th>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of listaTarefas |  paginate: { itemsPerPage: 5, currentPage: p }">
+                            <td>{{item.nome}}</td>
+                            <td *ngIf="item.status == 0">Pendente</td>
+                            <td *ngIf="item.status == 1">Pago</td>
+                            <td>
+                                <a routerLink="/edit/{{item.id}}">
+                                    <fa-icon [icon]="faEdit"></fa-icon> edit
+                                </a>
+                                <a>
+                                    <fa-icon [icon]="faTrash"></fa-icon> delete
+                                </a>
+    
+                            </td>
+    
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                            </td>
+                        </tr>
+    
+                    </tbody>
+                </table>
+            </div>
+          </div>
         </div>
-       
-    </div>
+      </div>
+    
