--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -1,3 +1,5 @@
+<div id="wrapper"  [ngClass]="ref.click === true? 'toggled' :''" >
+  <div class="overlay" [ngStyle]="{disply:ref.click === true? 'block' :'none'}" ></div>
  <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
@@ -12,10 +14,16 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
           <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-            <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+            <button appSidebar  #ref="appSidebar" type="button" class="hamburger is-closed" data-toggle="offcanvas">
+              <span class="hamb-top"></span>
+              <span class="hamb-middle"></span>
+              <span class="hamb-bottom"></span>   
+          </button>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
@@ -38,7 +46,10 @@
                 </li>
               </ul>
             </div>
+            
           </nav>
+
+
           <div class="container-fluid">
             <h1 class="mt-4">Simple Sidebar</h1>
             <div class="tableLista">
@@ -79,5 +90,6 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     
