--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,58 +1,32 @@
-<div id="wrapper"  [ngClass]="ref.click === true? 'toggled' :''" >
-  <div class="overlay" [ngStyle]="{disply:ref.click === true? 'block' :'none'}" ></div>
+<div id="wrapper" [ngClass]="ref.click === true? 'toggled' :''">
+  <div class="overlay" [ngStyle]="{disply:ref.click === true? 'block' :'none'}"></div>
 
-<div class="d-flex" id="wrapper">
+  <div class="d-flex" id="wrapper">
     <!-- Sidebar -->
-    <div class="bg-dark border-right " id="sidebar-wrapper">
-      <div class="sidebar-heading  text-light">Therichpost </div>
-      <div class="list-group list-group-flush">
-        <a routerLink="/home" class="list-group-item list-group-item-action bg-dark">Dashboard</a>
-        <a routerLink="/listatarefa" class="list-group-item list-group-item-action bg-dark">Tarefas</a>
-        <a routerLink="/new" class="list-group-item list-group-item-action bg-dark">Nova Tarefa</a>
-      </div>
-    </div>
-    <!-- /#sidebar-wrapper -->
-    <!-- Page Content -->
+    <app-sidebar></app-sidebar>
     <div id="page-content-wrapper">
+      <!--nav-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
 
-        <button appSidebar  #ref="appSidebar" type="button" class="hamburger is-closed" data-toggle="offcanvas">
+        <button appSidebar #ref="appSidebar" type="button" class="hamburger is-closed" data-toggle="offcanvas">
           <span class="hamb-top"></span>
           <span class="hamb-middle"></span>
-          <span class="hamb-bottom"></span>   
-      </button>
-      <a></a>
-     
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon></span>
+          <span class="hamb-bottom"></span>
         </button>
-
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown navbar-light">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               {{nome}}
-              </a>
-              <div class="dropdown-menu dropdown-menu-right  bg-ligth" aria-labelledby="navbarDropdown">
-                <a  (click)="logout()"><fa-icon [icon]="faTimesCircle" id="icon"></fa-icon>sair</a>
-              </div>
-            </li>
-          </ul>
+       
+        <a></a>
+        <!--navbar-toogle-->
+        <app-navbartoogle></app-navbartoogle>
+        <!--navbar-collapse-->
+       
+        <div class="collapse navbar-collapse  justify-content-end" id="navbarSupportedContent">
+          <app-collapse></app-collapse>
         </div>
-
       </nav>
-      
+
       <div class="container-fluid">
         <app-cards></app-cards>
       </div>
     </div>
   </div>
-  </div>
-
-
-   
-
-
+</div>
