--- a/src/app/listatarefa/new-list/new-list.component.html
+++ b/src/app/listatarefa/new-list/new-list.component.html
@@ -1,43 +1,23 @@
-
+<div id="wrapper"  [ngClass]="ref.click === true? 'toggled' :''" >
+  <div class="overlay" [ngStyle]="{disply:ref.click === true? 'block' :'none'}" ></div>
  <div class="d-flex" id="wrapper">
           <!-- Sidebar -->
-          <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading">Therichpost </div>
-            <div class="list-group list-group-flush">
-              <a routerLink="/home" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-              <a routerLink="/listatarefa" class="list-group-item list-group-item-action bg-light">Tarefas</a>
-              <a routerLink="/new" class="list-group-item list-group-item-action bg-light">Nova Tarefa</a>
-            </div>
-          </div>
+          <app-sidebar></app-sidebar>
           <!-- /#sidebar-wrapper -->
           <!-- Page Content -->
           <div id="page-content-wrapper">
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-              <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     {{nome}}
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a  (click)="logout()"><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon>sair</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                  </li>
-                </ul>
+             
+              <button appSidebar  #ref="appSidebar" type="button" class="hamburger is-closed" data-toggle="offcanvas">
+                <span class="hamb-top"></span>
+                <span class="hamb-middle"></span>
+                <span class="hamb-bottom"></span>   
+            </button>
+            <a></a>
+              <app-navbartoogle></app-navbartoogle>
+
+              <div class="collapse navbar-collapse  justify-content-end" id="navbarSupportedContent">
+              <app-collapse></app-collapse>
               </div>
             </nav>
 
@@ -79,6 +59,7 @@
               </form>
             </div>
           </div>
+        </div>
         </div>
       
     
