--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -1,110 +1,15 @@
 .cards{
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-top: 10px;
+    margin: 20px 2px 2px 2px;
     font-weight: 100;
 }
-.cards h1 {
-    opacity: 0.7;
-}
 
-.card1 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 5px;
-    background: rgb(2, 81, 100);
-    width: 250px;
-    height: 160px;
-    margin-top: 10px;
-    color: whitesmoke;
 
-   
-}
 
-.card2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 5px;
-    background: rgb(2, 128, 2);
-    width: 250px;
-    height: 160px;
-    margin-top: 10px;
-    color: whitesmoke;
-}
 
-.card3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 5px;
-    background: rgb(245, 69, 4);
-    width:250px;
-    height: 160px;
-    margin-top: 10px;
-    color: whitesmoke;
-}
-
-.card4 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 5px;
-    background: rgb(243, 188, 7);
-    width:250px;
-    height: 160px;
-    margin-top: 10px;
-    color: rgb(37, 35, 35);
- 
-}
-.info1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
-    background: rgba(4, 70, 88, 0.6);
-    padding: 5px 103px 5px 103px;
-    border-radius: 0px 0px 5px 5px ;
-}
-.info2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
-    background: rgba(24, 77, 2, 0.986);
-    padding: 5px 103px 5px 103px;
-    border-radius: 0px 0px 5px 5px ;
-}
-.info3{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
-    background: rgba(107, 15, 2, 0.986);
-    padding: 5px 103px 5px 103px;
-    border-radius: 0px 0px 5px 5px ;
-}
-.info4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
-    background: rgba(139, 126, 3, 0.986);
-    padding: 5px 103px 5px 103px;
-    border-radius: 0px 0px 5px 5px ;
-}
-.cards .icon {
-   font-size: 50px;
-    color: white;
-    opacity: 0.3;
-}
 
 
 
