--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,53 +1,6 @@
 <div class="cards">
-
-    <div class="card1">
-        <h3>Pendente 50</h3>
-        <div class="icon">
-            <a>
-                <fa-icon [icon]="faListAlt"></fa-icon>
-            </a>
-        </div>
-        <a class="info1">
-            <fa-icon [icon]="faEye"></fa-icon> info
-        </a>
-    </div>
-
-
-    <div class="card2">
-        <h3>Lista 78</h3>
-        <div class="icon">
-            <a>
-                <fa-icon [icon]="faListUl"></fa-icon>
-            </a>
-        </div>
-        <a class="info2">
-            <fa-icon [icon]="faEye"></fa-icon> info
-        </a>
-    </div>
-
-
-    <div class="card3">
-        <h3>Valor 1260</h3>
-        <div class="icon">
-            <a>
-                <fa-icon [icon]="faMoneyBill"></fa-icon>
-            </a>
-        </div>
-        <a class="info3">
-            <fa-icon [icon]="faEye"></fa-icon> info
-        </a>
-    </div>
-
-    <div class="card4">
-        <h3>Concluidas 152</h3>
-        <div class="icon">
-            <a>
-                <fa-icon [icon]="faCheck"></fa-icon>
-            </a>
-        </div>
-        <a class="info4">
-            <fa-icon [icon]="faEye"></fa-icon> info
-        </a>
-    </div>
-
+    <app-cardpendente></app-cardpendente>
+    <app-cardlista></app-cardlista>
+    <app-cardvalortarefa></app-cardvalortarefa>
+    <app-cardtarefaconcluida></app-cardtarefaconcluida>
 </div>
