--- a/src/app/cards/cardpendente/cardpendente.component.html
+++ b/src/app/cards/cardpendente/cardpendente.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
         <h5 class="card-title">Quantidade 50</h5>
         <p class="card-text">
-           Algumas lista de tarefas pendentes 
+           Algumas lista de tarefas pendentes para hoje
         </p>
     </div>
 </div>
