--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -7,6 +7,15 @@
     font-weight: 100;
 }
 
+@media (max-width: 575.98px) {
+    .cards{
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        margin-top: 20px;
+        font-weight: 100;
+    }
+ }
 
 
 
