--- a/src/app/cards/cardpendente/cardpendente.component.html
+++ b/src/app/cards/cardpendente/cardpendente.component.html
@@ -1,5 +1,8 @@
 <div class="card text-white bg-info mb-3">
-    <div class="card-header">Tarefas Pendentes</div>
+    <div class="card-header">
+        <h3>Pendentes</h3>
+        <a><fa-icon [icon]="faTasks"></fa-icon></a>
+    </div>
     <div class="card-body">
         <h5 class="card-title">Quantidade 50</h5>
         <p class="card-text">
