--- a/src/app/cards/cardvalortarefa/cardvalortarefa.component.html
+++ b/src/app/cards/cardvalortarefa/cardvalortarefa.component.html
@@ -1,5 +1,8 @@
 <div class="card text-white bg-danger mb-3">
-    <div class="card-header">Valor</div>
+    <div class="card-header">
+      <h3>Valor</h3>
+      <a class="text-white"><fa-icon [icon]="faMoneyBillWave"></fa-icon> </a>
+    </div>
     <div class="card-body">
       <h5 class="card-title">totalde 1250 R$</h5>
       <p class="card-text">
