--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,7 @@ body {
 .hamburger.is-closed .hamb-top,
 .hamburger.is-closed .hamb-middle,
 .hamburger.is-closed .hamb-bottom {
-  background-color: #1a1a1a;
+  background-color: #212202;
 }
 .hamburger.is-closed .hamb-top { 
   top: 5px; 
