--- a/src/app/cards/cardtarefaconcluida/cardtarefaconcluida.component.html
+++ b/src/app/cards/cardtarefaconcluida/cardtarefaconcluida.component.html
@@ -1,5 +1,8 @@
 <div class="card text-white bg-warning mb-3">
-    <div class="card-header">Tarefas concluida</div>
+    <div class="card-header">
+      <h3>Concluida</h3>
+       <a class="text-white"><fa-icon [icon]="faCheck" id="icon"></fa-icon> </a>
+    </div>
     <div class="card-body">
       <h5 class="card-title">total de 29</h5>
       <p class="card-text">
