--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
       </nav>
 
       <div class="container-fluid">
-        <h1>Dashboard</h1>
+        <h1 class="mt-4">Dashboard</h1>
         <app-cards></app-cards>
       </div>
     </div>
