--- a/src/app/cards/cardlista/cardlista.component.html
+++ b/src/app/cards/cardlista/cardlista.component.html
@@ -1,10 +1,10 @@
 <div class="card text-white bg-success mb-3">
     <div class="card-header">
      <h3>Lista</h3>
-     <a class="text-white"><fa-icon [icon]="faListAlt" id="icon"></fa-icon> </a>
+     <a routerLink="/listatarefa"><fa-icon [icon]="faListAlt" id="icon"></fa-icon> </a>
     </div>
     <div class="card-body">
-      <h5 class="card-title">total de tarefas 79</h5>
+      <h5 class="card-title">Tarefas {{count}}</h5>
       <p class="card-text">
           Veja abaixo os detalhes e quantidade de tarefas.
       </p>
