--- a/src/app/cards/cardpendente/cardpendente.component.html
+++ b/src/app/cards/cardpendente/cardpendente.component.html
@@ -4,7 +4,7 @@
         <a><fa-icon [icon]="faTasks"></fa-icon></a>
     </div>
     <div class="card-body">
-        <h5 class="card-title">Quantidade 50</h5>
+            <h5 class="card-title">Total {{count}}</h5>
         <p class="card-text">
            Algumas lista de tarefas pendentes para hoje
         </p>
