--- a/src/app/cards/cardvalortarefa/cardvalortarefa.component.html
+++ b/src/app/cards/cardvalortarefa/cardvalortarefa.component.html
@@ -4,7 +4,7 @@
       <a class="text-white"><fa-icon [icon]="faMoneyBillWave"></fa-icon> </a>
     </div>
     <div class="card-body">
-      <h5 class="card-title">totalde 1250 R$</h5>
+      <h5 class="card-title">Total {{count}} R$</h5>
       <p class="card-text">
           Soma de todos os valores gasto em tarefas
       </p>
