--- a/src/styles.css
+++ b/src/styles.css
@@ -87,13 +87,13 @@ body {
   text-align: center;
   opacity: 0;
   -webkit-transform: translate3d(0,0,0);
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 .hamburger.is-closed:hover:before {
   opacity: 1;
   display: block;
   -webkit-transform: translate3d(-100px,0,0);
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all 15s ease-in-out;
 }
 
 .hamburger.is-closed .hamb-top,
@@ -114,7 +114,7 @@ body {
 }
 .hamburger.is-closed .hamb-top { 
   top: 5px; 
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 .hamburger.is-closed .hamb-middle {
   top: 50%;
@@ -122,16 +122,16 @@ body {
 }
 .hamburger.is-closed .hamb-bottom {
   bottom: 5px;  
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 
 .hamburger.is-closed:hover .hamb-top {
   top: 0;
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 .hamburger.is-closed:hover .hamb-bottom {
   bottom: 0;
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 .hamburger.is-open .hamb-top,
 .hamburger.is-open .hamb-middle,
@@ -162,13 +162,13 @@ body {
   text-align: center;
   opacity: 0;
   -webkit-transform: translate3d(0,0,0);
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 .hamburger.is-open:hover:before {
   opacity: 1;
   display: block;
   -webkit-transform: translate3d(-100px,0,0);
-  -webkit-transition: all .35s ease-in-out;
+  -webkit-transition: all .15s ease-in-out;
 }
 
 /*-------------------------------*/
