--- a/src/app/template/dashboard/listatarefa/listatarefa.component.html
+++ b/src/app/template/dashboard/listatarefa/listatarefa.component.html
@@ -33,6 +33,9 @@
 
           </div>
 
+          <label for="search-box">Search Tarefas</label>
+          <input #searchBox id="search-box" (input)="searchTarefas(searchBox.value)" />
+
             <p *ngFor="let alert of alerts">
                 <ngb-alert [type]="alert.type" 
                 (closed)="close(alert)">
