--- a/src/app/template/dashboard/home/home.component.html
+++ b/src/app/template/dashboard/home/home.component.html
@@ -27,6 +27,9 @@
       <div class="container-fluid">
         <h1 class="mt-4">Dashboard</h1>
         <app-cards></app-cards>
+        <!--charts-->
+      
+
       </div>
     </div>
   </div>
