--- a/src/app/template/dashboard/home/home.component.html
+++ b/src/app/template/dashboard/home/home.component.html
@@ -6,7 +6,7 @@
     <app-sidebar></app-sidebar>
     <div id="page-content-wrapper">
       <!--nav-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-light bg-nav border-bottom">
 
         <button appSidebar #ref="appSidebar" type="button" class="hamburger is-closed" data-toggle="offcanvas">
           <span class="hamb-top"></span>
