--- a/src/app/template/dashboard/listatarefa/listatarefa.component.css
+++ b/src/app/template/dashboard/listatarefa/listatarefa.component.css
@@ -38,7 +38,7 @@ th{
 td{
     padding: 2px;
     text-align: left;
-    color: rgb(243, 233, 233);
+    color: whitesmoke;
     font-size: 12px;
     font-weight: 100;
 }
