--- a/src/app/template/dashboard/listatarefa/new-list/new-list.component.html
+++ b/src/app/template/dashboard/listatarefa/new-list/new-list.component.html
@@ -47,8 +47,8 @@
                     <label for="inputState">Situação</label>
                     <select  class="form-control" ngModel name="situacao">
                         <option value="">Situação</option>
-                        <option value="1">Pago</option>
-                        <option value="0">Pendente</option>
+                        <option value="1">pago</option>
+                        <option value="0">pendente</option>
                     </select>
                   </div>
                   <div class="form-group col-md-2">
