--- a/src/app/template/caduser/caduser.component.css
+++ b/src/app/template/caduser/caduser.component.css
@@ -1,70 +1,15 @@
-
-.caduser h3 {
-    text-align: center;
-    color: rgb(53, 50, 50);
-    margin: 20px 0px 30px 0px;
-}
-.caduser p{
-    color:red;
-    font-size: 12px;
-}
-.caduser {
+.login{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid gray;
-    border-radius: 5px;
-    width: 600px;
-    padding: 0px 0px 20px 0px;
-    
-
-    margin: 50px auto;
-   
-}
-.form-group {
-    color: rgb(53, 50, 50);;
-    font-size: 12px;
-}
-.form-group input{
-    border-radius: 5px;
-    margin: 10px 0px 10px 0px;
-    padding: 10px;
-    width: 500px;
-    border: 1px solid gray;
 }
 
-
-button {
-    margin-right: 10px;
-    padding: 10px;
-    background: rgb(14, 32, 138);  
-    border-radius: 5px;
-    color: #fff;
-    border: none;
-}
-#icon{
-    font-size: 15px;
+button{
     margin-right: 10px;
 }
-
-@media screen and (max-width:500px) {
-    .form-group input {
-        width: 300px;
-    }
-    .caduser {
-        width: 300px;
-    }
+.button{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
-
-@media screen and (max-width:650px) {
-    
-    .caduser {
-        width: 400px;
-    }
-
-    .form-group input {
-        width: 350px;
-    }
-}
-
 
