--- a/src/app/template/caduser/caduser.component.html
+++ b/src/app/template/caduser/caduser.component.html
@@ -1,50 +1,59 @@
 <app-navbar></app-navbar>
-
-<section class="caduser">
+<div class="container-fluid">
+    
+    <div class="login">
      
-    <form #f="ngForm" (ngSubmit)="OnSubmit(f)" novalidate>
-        <h3>Novo Usuário</h3>
-       <div *ngFor= "let obg of error">
-        <p>{{obg.msg}}</p>
-       </div>
 
+      <form #f="ngForm" (ngSubmit)="OnSubmit(f)">
+        <h1 class="mt-3">Novo Usuário</h1>
+        <div *ngFor="let obg of error">
+          <p>{{obg.msg}}</p>
+        </div>
+      
         <div *ngIf="camposvazio">
           <p><strong>{{camposvazio}}</strong></p>
         </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Nome <span>*</span></label><br>
-          <input type="text"  name="nome" ngModel required #nome="ngModel">
-          
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="nome">Nome<span>*</span></label>
+            <input type="text" class="form-control" name="nome" ngModel required #nome="ngModel">
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="sobrenome">sobrenome <span>*</span></label>
+            <input type="text" class="form-control" name="sobrenome" ngModel>
+          </div>
         </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Sobrenome <span>*</span></label><br>
-            <input type="text" class="form-control"  name="sobrenome" ngModel >
-            
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email <span>*</span></label><br>
-            <input type="email" class="form-control"  name="email" ngModel >
-            
-          </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password <span>*</span></label><br>
-          <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel >
-        </div>
-
-        <div class="form-group">
-            <label for="exampleInputPassword1">Repet passwod <span>*</span></label><br>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="reset" ngModel >
-          </div>
-
-        <div class="button">
-          <button type="submit">
-          <fa-icon [icon]="faUserCircle" id="icon"></fa-icon>Cadastra-se
-        </button>
-
-         <button type="reset">
-              <fa-icon [icon]="faMinusSquare" id="icon"></fa-icon>Cancelar
-        </button>
     
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="exampleInputEmail1">Email <span>*</span></label>
+            <input type="email" class="form-control" name="email" ngModel>
+          </div>
         </div>
+    
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="exampleInputPassword1">Password <span>*</span></label>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel>
+          </div>
+    
+          <div class="form-group col-md-6">
+            <label for="exampleInputPassword1">Repet passwod <span>*</span></label>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="reset" ngModel>
+          </div>
+        </div>
+    
+      
+          <div class="buttom">
+            <button type="submit" class="btn btn-primary">
+              <fa-icon [icon]="faUserCircle" id="icon"></fa-icon>Cadastra-se
+            </button>
+            <button type="reset" class="btn btn-info">
+              <fa-icon [icon]="faMinusSquare" id="icon"></fa-icon>Cancelar
+            </button>
+          </div>
+     
       </form>
-  </section>
+    </div>
+</div>
