--- a/src/app/template/login/login.component.html
+++ b/src/app/template/login/login.component.html
@@ -5,6 +5,7 @@
 <div class="card text-center">
   <div class="card-body">
     <form  #f="ngForm" (ngSubmit)="login(f)">
+      <h3>Admin</h3>
       <div *ngIf="alert">
         <p *ngFor="let item of alert">
           <ngb-alert [type]="item.type"  (closed)="close(item)">{{ item.message}}</ngb-alert>
@@ -12,7 +13,6 @@
       </div>
       <div class="form-group">
         <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"  name="email" ngModel>
-       
       </div>
       <div class="form-group">
         <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel>
@@ -24,7 +24,7 @@
         </button>
     
         <button class="btn btn-info">
-          <a href="/caduser">
+          <a routerLink="/caduser">
             <fa-icon [icon]="faUserPlus"></fa-icon>Cadastra-se
           </a>
         </button>
