--- a/src/app/template/dashboard/listatarefa/new-list/new-list.component.html
+++ b/src/app/template/dashboard/listatarefa/new-list/new-list.component.html
@@ -28,12 +28,12 @@
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="inputEmail4">Nome</label>
-                    <input type="text" class="form-control"  placeholder="Nome" ngModel name="nome">
+                    <input type="text" class="form-control"  placeholder="Nome" ngModel name="nome" autocomplete="off">
                   </div>
         
                   <div class="form-group col-md-6">
                     <label for="inputPassword4">local</label>
-                    <input type="text" class="form-control"  placeholder="Local" ngModel name="local">
+                    <input type="text" class="form-control"  placeholder="Local" ngModel name="local" autocomplete="off">
                   </div>
                 </div>
         
@@ -41,7 +41,7 @@
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="inputCity">Valor</label>
-                    <input type="text" class="form-control" ngModel name="valor">
+                    <input type="text" class="form-control" ngModel name="valor" autocomplete="off">
                   </div>
                   <div class="form-group col-md-4">
                     <label for="inputState">Situação</label>
@@ -53,7 +53,7 @@
                   </div>
                   <div class="form-group col-md-2">
                     <label for="inputZip">Data</label>
-                    <input type="date" class="form-control" ngModel name="data">
+                    <input type="date" class="form-control" ngModel name="data" autocomplete="off">
                   </div>
                 </div>
                 <button type="submit" class="btn btn-primary">
