--- a/src/app/template/login/login.component.html
+++ b/src/app/template/login/login.component.html
@@ -12,10 +12,10 @@
         </p>
       </div>
       <div class="form-group">
-        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"  name="email" ngModel>
+        <input type="email" class="form-control" placeholder="Enter email"  name="email" ngModel autocomplete="off">
       </div>
       <div class="form-group">
-        <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel>
+        <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel autocomplete="off">
       </div>
     
       <div class="button">
